updated security scheme for swagger
