# storage/api-docs/api-docs.json
@@ -37,7 +37,7 @@
                 },
                 "security": [
                     {
-                        "api_key": []
+                        "sanctum": []
                     }
                 ]
             }
@@ -96,6 +96,14 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
             }
         }
     },
